# ros2-yolo11

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/bot_sim/lib/bot_sim/: color_segmentation_node
install/bot_sim/share/ament_index/resource_index/package_run_dependencies/: bot_sim
install/bot_sim/share/ament_index/resource_index/parent_prefix_path/: bot_sim
install/bot_sim/share/bot_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bot_sim/share/bot_sim/cmake/: bot_simConfig-version.cmake  bot_simConfig.cmake
install/bot_sim/share/bot_sim/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/bot_sim/: CMakeLists.txt
src/bot_sim/models/: coco.names
src/bot_sim/src/: color_segmentation_node.cpp
src/yolo_ws/: CMakeLists.txt  package.xml
src/yolo_ws/src/: main.cpp
